<resources>
    <string name="app_name">Xandria</string>
    <string name="host_a_book">Host a Book</string>
    <string name="enter_book_title">Enter Book Title</string>
    <string name="enter_book_subtitle">Enter Book Subtitle</string>
    <string name="enter_author_name">Enter Author Name</string>
    <string name="enter_book_image_link">Enter Book Image Link</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="enter_book_description">Enter Book Description</string>
    <string name="add_course">Add Course</string>
    <string name="cancel">Cancel</string>
    <string name="cover_image">The book\'s cover image</string>
    <string name="join_discussion">Join Discussion</string>
    <string name="go_back_to_main">Go Back To Main</string>
    <string name="nav_open_drawer">Open Drawer</string>
    <string name="nav_close_drawer">Close Drawer</string>
    <string name="book_orders">Orders</string>
    <string name="add_book_fab">Add Book Fab</string>
    <string name="new_order_fab">Create New Order Fab</string>
    <string name="home">Home</string>
    <string name="order_a_book">BORROW A BOOK</string>
    <string name="book_title"><![CDATA[<b>Book Title:</b>]]></string>
    <string name="collection_location"><![CDATA[<b>Collection Location:</b>]]></string>
    <string name="drop_location"><![CDATA[<b>Drop location:</b>]]></string>
    <string name="ordered_from"><![CDATA[<b>Ordered From:</b>]]></string>
    <string name="date_ordered"><![CDATA[<b>Date Ordered:</b>]]></string>
    <string name="author_name"><![CDATA[<b>Authors:</b>]]></string>
    <string name="description"><![CDATA[<b>Description:</b>]]></string>
    <string name="publisher"><![CDATA[<b>Publisher:</b>]]></string>
    <string name="publish_date"><![CDATA[<b>Publish Date:</b>]]></string>
    <string name="ISBN"><![CDATA[<b>ISBN:</b>]]></string>
    <string name="owner"><![CDATA[<b>Book Host:</b>]]></string>
    <string name="book_requests">Book Requests</string>
    <string name="create_request_fab">Create Request Fab</string>
    <string name="enter_message">Enter Message</string>
    <string name="discussion">Book Recommendations</string>
    <string name="send_button">Send button</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="name"><![CDATA[<b>Name:</b>]]></string>
    <string name="points"><![CDATA[<b>Points:</b>]]></string>
    <string name="email"><![CDATA[<b>Email:</b>]]></string>
    <string name="phone"><![CDATA[<b>Phone:</b>]]></string>
    <string name="address"><![CDATA[<b>Address:</b>]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="google_search">Search name, author, category etc</string>
    <string name="logo">Logo</string>
    <string name="my_borrowed_books">Borrowed from me</string>
    <string name="return_book">Return Book</string>
    <string name="confirm_book_received">Confirm Book Received</string>
    <string name="returned_orders">Returned Orders</string>
    <string name="title_activity_returned_order">ReturnedOrderActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_pick_up_location">Enter drop Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="or">or</string>
    <string name="create_order">Borrow book</string>
    <string name="use_current_location">Use current location</string>
    <string name="welcome">Welcome</string>
    <string name="description_title"><u>Description</u></string>
    <string name="edit_book">Edit Book</string>
    <string name="preview_external">Preview (External)</string>
    <string name="place_order">Place Order</string>
    <string name="order_status"><![CDATA[<b>Order Status:</b>]]></string>
    <string name="return_status"><![CDATA[<b>Return Status:</b>]]></string>
    <string name="street_address">Street Address</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="contact">Contact</string>
    <string name="books_map">Books Map</string>
    <string name="GPSAlertDialogTitle">Allow Location Access</string>
    <string name="GPSAlertDialogMessage">This app uses location permissions to get books near you</string>
    <string name="action_settings">OK</string>
    <string name="course_name">Course Name</string>
    <string name="book_image">Book Image</string>
    <string name="book_title_2">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="add_location">Add Location</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="the_following_contact_will_be_used">The following contact will be used</string>
    <string name="click_here_to_change"><u>Click here to change</u></string>
    <string name="proceed">Proceed</string>
    <string name="enter_value_of_book">Enter value of book in Rupees</string>
    <string name="account_profile">Account Profile</string>
    <string name="buy_points">Buy Points</string>
    <string name="specify_the_amount_in_rupees">Specify the amount in Rupees</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="returning">Returning</string>
    <string name="all">All</string>
    <string name="get_your_order">How to you want to get your order?</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password_reset_email_instructions">You will receive password reset instructions in the email</string>
    <string name="reset_text">Forgot password? Reset Here</string>
    <string name="reg_text">New User? Register Here</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_sub_category">Add Sub-Category</string>
    <string name="scroll_back_arrow_button">Scroll back arrow button</string>
</resources>