<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            android:checked="true"/>
        <item android:id="@+id/nav_maps_view"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/books_map"/>
        <item
            android:id="@+id/nav_requests"
            android:icon="@android:drawable/stat_notify_more"
            android:title="@string/book_requests" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/book_orders" />
        <item
            android:id="@+id/nav_returned_orders"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/returned_orders" />
        <item
            android:id="@+id/nav_my_ordered_books"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/my_borrowed_books"/>
        <item
            android:id="@+id/nav_discussion"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/discussion" />

    </group>

    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>