<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.order.OrderPlacedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/order_status">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="300dp"
            android:id="@+id/ordered_book_image"
            android:background="@color/black"
            android:contentDescription="@string/cover_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:id="@+id/orderedBookTitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection_location"
                android:id="@+id/orderedBookCollectionLocation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordered_from"
                android:id="@+id/orderedBookHostLocationUserId"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_ordered"
                android:id="@+id/orderedBookDateOrdered"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm_book_received"
            android:background="@drawable/custom_button_background"
            android:layout_margin="10dp"
            android:text="@string/confirm_book_received"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_return_book"
            android:background="@drawable/custom_button_background"
            android:layout_margin="10dp"
            android:text="@string/return_book"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/joinDiscussion"
            android:background="@drawable/custom_button_background"
            android:layout_margin="10dp"
            android:text="@string/join_discussion"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/orderToMainPage"
            android:background="@drawable/custom_button_background"
            android:layout_margin="10dp"
            android:text="@string/go_back_to_main"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>