<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_border">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="1dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:id="@+id/book_image"
                        android:layout_gravity="center"
                        android:background="@color/black"
                        android:contentDescription="@string/cover_image" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_title"
                            android:id="@+id/book_title"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/author_name"
                            android:id="@+id/book_authors"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publisher"
                            android:id="@+id/book_publisher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publish_date"
                            android:id="@+id/publish_date"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ISBN"
                            android:id="@+id/book_ISBN"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/owner"
                            android:id="@+id/book_owner"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_title"
                        android:id="@+id/description_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/book_description"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/edit_book"
                        android:textColor="@color/black"
                        android:background="@drawable/custom_button_background"
                        android:id="@+id/EditBookBtn"/>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/preview_external"
                        android:textColor="@color/black"
                        android:background="@drawable/custom_button_background"
                        android:id="@+id/viewPreviewBtn"/>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/place_order"
                        android:textColor="@color/black"
                        android:background="@drawable/custom_button_background"
                        android:id="@+id/order_button"/>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/joinDiscussion"
                        android:background="@drawable/custom_button_background"
                        android:layout_margin="10dp"
                        android:text="@string/join_discussion"
                        android:textColor="@color/black"/>

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/orderToMainPage"
                        android:background="@drawable/custom_button_background"
                        android:layout_margin="10dp"
                        android:text="@string/go_back_to_main"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>